Detect Qt 6.3 modules.